tests/invalid/functions/bad_arg.rs
/*
compilationExitCode: 3
*/

foo(a: i64): i64{
    return 3 + a;
}

main(): i32{
    return foo();
}